--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
         <div class="container content-tab p-5 rounded-3 shadow">
             <h1>Tip of the Day</h1>
             <p>
-                [Cybersecurity tip description]
+                Remember: don't install malware on your laptop! If you do... then make sure your firewall is on!
             </p>
         </div>
     </div>
