update weather style

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class="d-flex justify-content-center my-3">
         <div class="container content-tab p-5 rounded-3 shadow" style="max-width: 50em;">
-            <h1 class="section-heading">Good Morning</h1>
+            <h1 class="section-heading">Weather API test</h1>
             <p>
               <div id="root"></div>
             </p>
